Rebuild as an empty 1.21.1 NeoForge pack and keep the existing ship/test workflow.
Co-authored-by: Cursor <cursoragent@cursor.com>